k8s/policies/validate-task-request-auth/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sValidateTaskRequestAuth
metadata:
  name: validate-task-request-auth
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["policydriven.unimi.it"]
        kinds: ["TaskRequest"]
